# .ai

./: CONTRIBUTING.md  LICENSE  README.md  config.yaml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml
agents/: _index.yaml
agents/code-reviewer/: agent.md
agents/feature-builder/: agent.md  workflow.md
agents/migrator/: agent.md
context/: architecture.md  glossary.md  project.md  stack.md
context/decisions/: ADR-001-result-pattern.md  ADR-002-error-mapping.md  _template.md
learnings/: global.md
learnings/by-stack/: dotnet.md  terraform.md  typescript.md
prompts/: _index.yaml  system.md
prompts/templates/: code-review.md  documentation.md  refactor.md  security-audit.md  test-generation.md
skills/: _index.yaml
skills/cross-cutting/create-adr/: skill.md
skills/cross-cutting/security-review/: skill.md
skills/dotnet/add-error-mapping/: skill.md
skills/dotnet/add-http-client/: skill.md
skills/dotnet/create-endpoint/: skill.md
skills/dotnet/create-provider/: skill.md
skills/dotnet/generate-tests/: skill.md
skills/typescript/create-component/: skill.md
skills/typescript/create-hook/: skill.md
src/ai_wow/: __init__.py  __main__.py  cli.py
src/ai_wow/commands/: __init__.py  init.py  sync.py  update.py  validate.py
standards/: _index.yaml  global.md
standards/cicd/: azure-pipelines.md  dependabot.md  quality-gates.md
standards/dotnet/: aspnet.md  coding.md  functions.md  testing.md
standards/infrastructure/: azure.md  terraform.md
standards/linters/: dotnet-editorconfig.md  eslint-config.md  python-pyproject.md  tflint.md  yamllint.md
standards/python/: coding.md  testing.md
standards/scripting/: bash.md  powershell.md  python.md
standards/security/: codeql.md  owasp-top10.md  snyk.md
standards/typescript/: coding.md  react.md  testing.md
tests/: test_cli.py
tools/: init_project.py  requirements.txt  sync_claude.py  sync_github.py  sync_github_simple.py  validate.py
(+7 files in other folders)
